--- a/examples-record-and-train/example-record-and-train.xcodeproj/xcshareddata/xcschemes/example Release.xcscheme
+++ b/examples-record-and-train/example-record-and-train.xcodeproj/xcshareddata/xcschemes/example Release.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "example-record-samples.app"
-               BlueprintName = "example-record-samples"
-               ReferencedContainer = "container:example-record-samples.xcodeproj">
+               BuildableName = "example-record-and-train.app"
+               BlueprintName = "example-record-and-train"
+               ReferencedContainer = "container:example-record-and-train.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "example-record-samples.app"
-            BlueprintName = "example-record-samples"
-            ReferencedContainer = "container:example-record-samples.xcodeproj">
+            BuildableName = "example-record-and-train.app"
+            BlueprintName = "example-record-and-train"
+            ReferencedContainer = "container:example-record-and-train.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -53,9 +53,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "example-record-samples.app"
-            BlueprintName = "example-record-samples"
-            ReferencedContainer = "container:example-record-samples.xcodeproj">
+            BuildableName = "example-record-and-train.app"
+            BlueprintName = "example-record-and-train"
+            ReferencedContainer = "container:example-record-and-train.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "example-record-samples.app"
-            BlueprintName = "example-record-samples"
-            ReferencedContainer = "container:example-record-samples.xcodeproj">
+            BuildableName = "example-record-and-train.app"
+            BlueprintName = "example-record-and-train"
+            ReferencedContainer = "container:example-record-and-train.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
